# watchgate

./: .env  .gitignore  README.md  main.py  pyproject.toml
.github/prompts/: linkedin-project-showcase.prompt.md
src/: test.py
src/notebooks/: monitoring_tool.ipynb  monitoring_tool_Utils.ipynb  utils.py
